--- a/activeMoE/configs/phi2_nomoe_config.json
+++ b/activeMoE/configs/phi2_nomoe_config.json
@@ -33,11 +33,10 @@
     "vocab_size": 51200,
     "num_experts": 8,
     "expert_top_k": 2,
-    "moe_start_layer": 8,
+    "moe_start_layer": 30,
     "moe_layer_freq":2,
     "gate_type": "linear",
     "aux_loss_type": "mi",
-    "aux_loss_weight": 1e-2,
-    "do_moe": true
+    "aux_loss_weight": 1e-2
   }
   
